# reporting-template-pattern

./: README.md  pyproject.toml
myreport/config/: path.py  settings.py
myreport/entry_point/: create_report.py
myreport/entry_point/raw_data/: 202407_raw_data.csv
myreport/entry_point/reports/: 202407_gender_report.csv
myreport/report/: gender_distribution.py  reporter_mixin.py
myreport/schemas/: gender_report.py  raw_data.py
myreport/validation/: gender_report.py  raw_data.py  validator_mixin.py
