[tool.poetry]
name = "myreport"
version = "0.1.0"
description = ""
authors = ["shogohasegawa <hasesho0824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandera = "^0.20.3"
pandas = "^2.2.2"
ruff = "^0.5.6"
mypy = "^1.11.1"
pytest = "^8.3.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
